kubernetes/webwas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webwas-deploy-petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: skwjdgh1/petclinic:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /manage/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /logs
              name: log-vol
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds : 30
      volumes:
        - name: log-vol
          hostPath:
            path: /logs
