kubernetes/webwas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webwas-svc-petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  ports:
  - port: 8080
  selector:
    app: petclinic
  type: ClusterIP
