kubernetes/webwas/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webwas-ing-petclinic
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /(.*)
          backend:
            serviceName: webwas-svc-petclinic
            servicePort: 8080
